@@ -1,5 +1,11 @@
 2007-11-22  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Fix for bug 1832432:
+    * source/org/jfree/data/time/TimeSeries.java
+    (clone): Reimplemented.
+
+2007-11-22  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/DefaultKeyedValues.java
     (removeValue): Always rebuild index,
     * source/org/jfree/data/DefaultKeyedValues2D.java
